force-app/main/default/objects/GSI_BDM_Mapping__mdt/GSI_BDM_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>GSI BDM Mapping</label>
    <pluralLabel>GSI BDM Mappings</pluralLabel>
</CustomObject>