force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>225</length>
    <type>Text</type>
</CustomField>