force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>