force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/BDM_Id__c.field-meta.xml
<CustomField>
    <fullName>BDM_Id__c</fullName>
    <label>BDM Id</label>
    <length>225</length>
    <type>Text</type>
</CustomField>