force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/BDM_Name__c.field-meta.xml
<CustomField>
    <fullName>BDM_Name__c</fullName>
    <label>BDM Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>