force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <length>225</length>
    <type>Text</type>
</CustomField>