force-app/main/default/objects/GSI_BDM_Mapping__mdt/fields/Theatre__c.field-meta.xml
<CustomField>
    <fullName>Theatre__c</fullName>
    <label>Theatre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAM</fullName>
                <default>true</default>
                <label>NAM</label>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>AMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>